libs/extractor/tests/snapshots/snapshots/extractor__tests__props_direct_hybrid_responsive_select.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n;<Flex gap={[[a, 1, c], [d, e, 2]][idx]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "4px",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "gap",
                value: "8px",
                level: 2,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 0,
                identifier: "a",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 0,
                identifier: "d",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 1,
                identifier: "e",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 2,
                identifier: "c",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className={`a ${{\n\t\"0\": \"b d e\",\n\t\"1\": \"b g i\"\n}[idx] || \"\"}`} style={{\n\t\"--c\": {\n\t\t0: a,\n\t\t1: d\n\t}[idx],\n\t\"--f\": c,\n\t\"--h\": e\n}} />;\n",
}
