libs/extractor/tests/snapshots/snapshots/extractor__tests__props_direct_object_select.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex opacity={{a:1, b:0.5}[\"a\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "opacity",
                value: "1",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a b\" />;\n",
}
